trying to fix button alignment

--- a/assets/css/shortcodes.css
+++ b/assets/css/shortcodes.css
@@ -2383,7 +2383,7 @@ dl.toggle.time-line:before {
 }
 
 .text-center .dot {
-    margin-left: -17px;
+    ;
 }
 
 .dot:before {
